[tool.poetry]
name = "atcoder-ahc027"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
online-judge-tools = "^11.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
